--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>4.0.1</version>
+            <version>3.1.0</version>
             <scope>provided</scope>
         </dependency>
         <!--导入cxf的包-->
@@ -69,13 +69,50 @@
             <artifactId>cxf-rt-frontend-jaxws</artifactId>
             <version>3.3.2</version>
         </dependency>
-        <!--导入cxf的传输依赖-->
+        <!--导入cxf的http传输依赖-->
         <dependency>
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-rt-transports-http</artifactId>
             <version>3.3.2</version>
         </dependency>
+        <!--导入jax-rs依赖restfulservive-->
+        <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-frontend-jaxrs</artifactId>
+            <version>3.3.2</version>
+        </dependency>
+        <!--导入jetty 的http的依赖-->
+        <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-transports-http-jetty</artifactId>
+            <version>3.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>compile</scope>
+        </dependency>
+        <!--导入restfulwebservice 返回json的依赖包-->
+        <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-rs-extension-providers</artifactId>
+            <version>3.3.2</version>
+        </dependency>
+        <!--导入jackson处理jax-rs的json数据-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.jaxrs</groupId>
+            <artifactId>jackson-jaxrs-json-provider</artifactId>
+            <version>2.9.8</version>
+        </dependency>
+        <!--添加cxf依赖,以便访问wadl及项目描述-->
+        <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-rs-service-description</artifactId>
+            <version>3.3.2</version>
+        </dependency>
     </dependencies>
+
   <build>
     <finalName>spring-cxf</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
